<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="com.example.android.dawaa.DocActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/doc_image" />

            <TextView
                android:id="@+id/tv_doc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_name"
                android:layout_margin="3dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_doc_spec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_spec"
                android:layout_margin="3dp"
                android:textColor="@android:color/black"/>


            <TextView
                android:id="@+id/tv_doc_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_email"
                android:layout_margin="3dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_doc_telno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_tel_no"
                android:layout_margin="3dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_doc_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_address"
                android:layout_margin="3dp"
                android:textColor="@android:color/black"
                />


        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:text="@string/add_rdv_doc"/>


    <EditText
        android:id="@+id/et_desc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColorHint="@android:color/black"
        android:hint="@string/rdv_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/add_rdv_date_time"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_doc_rdv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_cal_rdv"/>

        <ImageView
            android:id="@+id/icon_doc_rdv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_time_rdv"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_doc_add_rdv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_rdv" />


</LinearLayout>
