<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.dawaa.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/etUEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/etPwd"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/etPwd"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etUEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_pwd"
        android:ems="10"
        android:hint="@string/Password"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/cardView2"
        android:layout_below="@+id/etPwd"
        android:layout_marginTop="91dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Login"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/cardView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/Create_account"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textViewPwdF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Forgot_password"
        android:textColor="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/btnLang"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="17dp"
        android:elevation="10dp"
        android:text="@string/Language"
        android:textSize="12sp"
        android:textColor="@android:color/white"
         />


</RelativeLayout>
