<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.android.dawaa.MeasurementsActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/Enter_data"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/Weight"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/Temperature"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Blood_pressure"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="#cdcdcd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/Glucose" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:text="@string/Side_effects" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#cdcdcd"
            android:layout_margin="10dp" />


    </LinearLayout>

</LinearLayout>
